--- a/test-output/old/Hub spot Test automtion regression suite/methods-alphabetical.html
+++ b/test-output/old/Hub spot Test automtion regression suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Hub spot Test automtion regression suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="daa29d">  <td>20/11/07 14:50:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.test.LoginPageTest@5aa6202e]">loginTest</td> 
-  <td>TestNG-tests-1@754692805</td>   <td></td> </tr>
-<tr bgcolor="fc9186">  <td>20/11/07 14:50:27</td>   <td>-19855</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.test.LoginPageTest@5aa6202e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@754692805</td>   <td></td> </tr>
-<tr bgcolor="daa29d">  <td>20/11/07 14:50:47</td>   <td>-318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:2, instance:com.qa.hubspot.test.LoginPageTest@5aa6202e]">verifyLoginPageTitleTest</td> 
-  <td>TestNG-tests-1@754692805</td>   <td></td> </tr>
-<tr bgcolor="daa29d">  <td>20/11/07 14:50:41</td>   <td>-6299</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:1, instance:com.qa.hubspot.test.LoginPageTest@5aa6202e]">verifySignUpLinkTest</td> 
-  <td>TestNG-tests-1@754692805</td>   <td></td> </tr>
+<tr bgcolor="f287a9">  <td>20/11/07 18:30:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.test.LoginPageTest@3af9aa66]">loginTest</td> 
+  <td>TestNG-tests-1@1989698605</td>   <td></td> </tr>
+<tr bgcolor="798ce3">  <td>20/11/07 18:30:06</td>   <td>-17552</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.test.LoginPageTest@3af9aa66]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1989698605</td>   <td></td> </tr>
+<tr bgcolor="f287a9">  <td>20/11/07 18:30:23</td>   <td>-59</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:2, instance:com.qa.hubspot.test.LoginPageTest@3af9aa66]">verifyLoginPageTitleTest</td> 
+  <td>TestNG-tests-1@1989698605</td>   <td></td> </tr>
+<tr bgcolor="f287a9">  <td>20/11/07 18:30:18</td>   <td>-4785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:1, instance:com.qa.hubspot.test.LoginPageTest@3af9aa66]">verifySignUpLinkTest</td> 
+  <td>TestNG-tests-1@1989698605</td>   <td></td> </tr>
 </table>
