--- a/test-output/old/Hub spot Test automtion regression suite/methods-alphabetical.html
+++ b/test-output/old/Hub spot Test automtion regression suite/methods-alphabetical.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Hub spot Test automtion regression suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f287a9">  <td>20/11/07 18:30:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.test.LoginPageTest@3af9aa66]">loginTest</td> 
-  <td>TestNG-tests-1@1989698605</td>   <td></td> </tr>
-<tr bgcolor="798ce3">  <td>20/11/07 18:30:06</td>   <td>-17552</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.test.LoginPageTest@3af9aa66]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1989698605</td>   <td></td> </tr>
-<tr bgcolor="f287a9">  <td>20/11/07 18:30:23</td>   <td>-59</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:2, instance:com.qa.hubspot.test.LoginPageTest@3af9aa66]">verifyLoginPageTitleTest</td> 
-  <td>TestNG-tests-1@1989698605</td>   <td></td> </tr>
-<tr bgcolor="f287a9">  <td>20/11/07 18:30:18</td>   <td>-4785</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:1, instance:com.qa.hubspot.test.LoginPageTest@3af9aa66]">verifySignUpLinkTest</td> 
-  <td>TestNG-tests-1@1989698605</td>   <td></td> </tr>
+<tr bgcolor="6a7463">  <td>20/11/07 21:06:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.test.LoginPageTest@13cda7c9]">loginTest</td> 
+  <td>TestNG-tests-1@1248200645</td>   <td></td> </tr>
+<tr bgcolor="6a7463">  <td>20/11/07 21:07:08</td>   <td>16868</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.loginTest()[pri:3, instance:com.qa.hubspot.test.LoginPageTest@76304b46]">loginTest</td> 
+  <td>TestNG-tests-2@695292543</td>   <td></td> </tr>
+<tr bgcolor="8ee2d0">  <td>20/11/07 21:06:31</td>   <td>-20424</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.test.LoginPageTest@13cda7c9]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@1248200645</td>   <td></td> </tr>
+<tr bgcolor="8ee2d0">  <td>20/11/07 21:06:31</td>   <td>-20424</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp(java.lang.String)[pri:0, instance:com.qa.hubspot.test.LoginPageTest@76304b46]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@695292543</td>   <td></td> </tr>
+<tr bgcolor="6a7463">  <td>20/11/07 21:06:51</td>   <td>-571</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:2, instance:com.qa.hubspot.test.LoginPageTest@13cda7c9]">verifyLoginPageTitleTest</td> 
+  <td>TestNG-tests-1@1248200645</td>   <td></td> </tr>
+<tr bgcolor="6a7463">  <td>20/11/07 21:07:08</td>   <td>16841</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:2, instance:com.qa.hubspot.test.LoginPageTest@76304b46]">verifyLoginPageTitleTest</td> 
+  <td>TestNG-tests-2@695292543</td>   <td></td> </tr>
+<tr bgcolor="6a7463">  <td>20/11/07 21:06:47</td>   <td>-4947</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:1, instance:com.qa.hubspot.test.LoginPageTest@13cda7c9]">verifySignUpLinkTest</td> 
+  <td>TestNG-tests-1@1248200645</td>   <td></td> </tr>
+<tr bgcolor="6a7463">  <td>20/11/07 21:07:03</td>   <td>11792</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifySignUpLinkTest()[pri:1, instance:com.qa.hubspot.test.LoginPageTest@76304b46]">verifySignUpLinkTest</td> 
+  <td>TestNG-tests-2@695292543</td>   <td></td> </tr>
 </table>
